// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform almost-eligible record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMeCustodyLevelIsMinimumOrCommunity": Object {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoDetainersWarrantsOrOther": null,
  },
  "externalId": "002",
  "ineligibleCriteria": Object {
    "usMeNoClassAOrBViolationFor90Days": Object {
      "eligibleDate": 2022-11-15T00:00:00.000Z,
      "highestClassViol": "A",
      "violType": "foo",
    },
    "usMeServedXPortionOfSentence": Object {
      "eligibleDate": 2023-01-03T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
    "usMeXMonthsRemainingOnSentence": Object {
      "eligibleDate": 2022-12-07T00:00:00.000Z,
    },
  },
  "stateCode": "US_ME",
}
`;

exports[`transform record 1`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMeCustodyLevelIsMinimumOrCommunity": Object {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": Object {
      "eligibleDate": 2022-11-03T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": Object {
      "eligibleDate": 2022-08-07T00:00:00.000Z,
    },
  },
  "externalId": "001",
  "ineligibleCriteria": Object {},
  "stateCode": "US_ME",
}
`;

exports[`transform record 2`] = `
Object {
  "caseNotes": Object {
    "foo": Array [
      Object {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": Object {
    "usMeCustodyLevelIsMinimumOrCommunity": Object {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": Object {
      "eligibleDate": 2022-11-03T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": Object {
      "eligibleDate": 2022-08-07T00:00:00.000Z,
    },
  },
  "externalId": "001",
  "ineligibleCriteria": Object {},
  "stateCode": "US_ME",
}
`;
